# 1440_test

./: CMakeLists.txt
src/: main.cpp  serverlistmodel.cpp  serverlistmodel.h  windowcontroller.cpp  windowcontroller.h
src/qml/: BaseDelegate.qml  BorderRectangle.qml  ConnectionIndicator.qml  ServerListDelegate.qml  ServerScreen.qml  StyledButton.qml  main.qml
src/qml/Style/: Globals.qml
